--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -168,17 +168,34 @@ a {
     
 }
 
-.rightArrow {
+.heading {
+    font-size: 1rem; 
+    font-weight: bold;
+    color: #592c69;
+    padding-left: 25%;
+}
+
+.right-wrapper {
     position: absolute;
     top: 50%;
     right: 20%;
+    z-index: 999;
+    background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.rightArrow {
     height: 3vh;
     color: #592c69;
 }
 
-.leftArrow {
+.left-wrapper {
     position: absolute;
     top: 50%;
+    z-index: 999;
+}
+.leftArrow {
     height: 3vh;
     color: #592c69;
 }
