--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -112,9 +112,9 @@ body {
     justify-items: center;
     align-items: center;
     grid-row-gap: 6vh;
-    padding-top: 10%;
+    padding-top: 18%;
     padding-left: 10%;
-    padding-bottom: 10%;
+    padding-bottom: 18%;
 }
 
 .grid-text {
@@ -159,13 +159,11 @@ a {
     align-items: center;
     justify-content: center;
     vertical-align: middle;
-   
     padding: 15% 30% 0% 10% ;
 }
 
 .carousel p {
     white-space: normal;
-    
 }
 
 .heading {
@@ -181,8 +179,8 @@ a {
     right: 20%;
     z-index: 999;
     background-color: transparent;
-  border: none;
-  outline: none;
+    border: none;
+    outline: none;
 }
 
 .rightArrow {
@@ -206,4 +204,17 @@ a {
     gap: 1vh;
     justify-items: center;
     align-items: center;
+}
+
+.carousel button {
+    border-radius: 50%;
+    border: none;
+    width: .5rem;
+    height: .7rem;
+    margin: 1%;
+    background-color: rgb(255, 215, 142);
+}
+
+.carousel button.active {
+    background-color: orange;
 }
